@@ -17,6 +17,7 @@
 
     WATO:
     * 0053 New rule for configuring the display_name of a service...
+    * 0048 FIX: Fixed locking issue on host diagnose page...
 
     Reporting & Availability:
     * 0051 Option for showing timeline directly in availability table...
@@ -155,7 +156,7 @@
     * Disabled replication type "peer" in site editor.
     * Added "permanently ignore" button to inventory services dialog which 
       links directly to the disabled services view
-    * Added dignose page linked from host edit dialog. This can be used to test
+    * Added diagnose page linked from host edit dialog. This can be used to test
       connection capabilities of hosts
     * The rule "Process inventory" now offers the same configuration options 
       as its manual check equivalent "State and count of processes"
